--- a/ex poo/index.html
+++ b/ex poo/index.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <meta charset="utf-8" />
-        <title>Calculadora</title>
+        <title>Geometrics</title>
         <link rel="stylesheet" href="bootstrap.css" />
         <link rel="stylesheet" href="style.css" />
     </head>
